--- a/index.html
+++ b/index.html
@@ -10,20 +10,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
+    <link rel="stylesheet" href="css/puce.css">      
     <!-- <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+</head>
 
 
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="#ecran1" class="puce puce1"> </a> </li>
-                <li><a href="#ecran2" class="puce puce2"> </a> </li>
-                <li><a href="#ecran3" class="puce puce3"> </a> </li>
-            </ul>
-        </nav>
+
 
 
         <div class="content">
@@ -46,6 +42,15 @@
             </div>
         </div>
     </header>
+
+    <nav>
+        <ul>
+            <li><a href="#ecran1" class="puce puce1"> </a> </li>
+            <li><a href="#ecran2" class="puce puce2"> </a> </li>
+            <li><a href="#ecran3" class="puce puce3"> </a> </li>
+        </ul>
+    </nav>
+    
     <div class="content">
         <div class="row">
             <div class="col">
@@ -57,7 +62,7 @@
 
         <div class="row">
             <div class="col">
-                <h2>Nos Films à l'affiche</h2>
+                <h2 id="ecran1">Nos Films à l'affiche</h2>
                 <div class="row"></div> <!-- div avec le boostrap-->
                 <p>Voir plus de films</p>
             </div>
@@ -66,7 +71,7 @@
 
         <div class="row">
         <div class="col">
-        <h2>Notre Cinéma</h2>
+        <h2 id="ecran2">Notre Cinéma</h2>
         <div class="col">
             <div class="row">
                 <h3>Ici vous pouvez retrouver des informations au sujet de notre cinéma</h3>
@@ -114,7 +119,7 @@
                    
         <div class="row">
         <div class="col">
-            <h2>Nos Services</h2>
+            <h2 id="ecran3">Nos Services</h2>
             <div class="row">
                 <!-- div avec les boutons-->
                 <div class="col">
