--- a/index.html
+++ b/index.html
@@ -95,11 +95,7 @@
             </div>
         </div>
     
-        <div class="col">
-            <img src = img-logo\image-cine.jpg
-            title = "notre cinéma"
-            alt ="notre cinéma">
-        </div>
+            <img src = img-logo\image-cine.jpg title = "notre cinéma" alt ="notre cinéma" class="cinemaLateral">
         </div>
     </div>
 
@@ -136,15 +132,12 @@
                             09.51.99.04.80
                     </div>
                 </div>
-                <div>
+            </div>
+            <div>
                     <div>
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3177.0318191972688!2d-0.5648688286896452!3d44.813136927981915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5527aac4575fe1%3A0x7daa99163ab271bf!2sLe%20Festival!5e0!3m2!1sfr!2sfr!4v1603199447077!5m2!1sfr!2sfr"
-                            width="1890" height="960" frameborder="0" style="border:0;" allowfullscreen=""
-                            aria-hidden="false" tabindex="0"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3177.0318191972688!2d-0.5648688286896452!3d44.813136927981915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5527aac4575fe1%3A0x7daa99163ab271bf!2sLe%20Festival!5e0!3m2!1sfr!2sfr!4v1603199447077!5m2!1sfr!2sfr" frameborder="0" class="maps" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                     </div>
                     <!--mettre la carte google ici-->
-                </div>
             </div>
 
             <div class="row">
@@ -153,7 +146,7 @@
                 <div>
                     <div class= "col">
                         <h3>Fabrice de la ROSA</h3>
-                        <img src=img-portrait\1.jpg title="Fabrice de la ROSA" alt="Fabrice de la ROSA">
+                        <img src=img-portrait\1.png title="Fabrice de la ROSA" alt="Fabrice de la ROSA" class="photoDeProfil">
                         <p>Directeur & programmateur
                             Bureau administratif
                             Cofondateur de Flip-Book
@@ -161,7 +154,7 @@
                     </div>
                     <div class= "col">
                         <h3>Severine</h3>
-                        <img src=img-portrait\3.jpg title="Severine" alt="Séverine">
+                        <img src=img-portrait\3.png title="Severine" alt="Séverine" class="photoDeProfil">
                         <p>Projectionniste & Animatrice
                             Cinéma "Le Festival"
                             Accueil
@@ -169,7 +162,7 @@
                     </div>
                     <div class= "col">
                         <h3>Christoph Jule</h3>
-                        <img src=img-portrait\2.jpg title="Christoph Jule" alt title="Christoph Jule">
+                        <img src=img-portrait\2.png title="Christoph Jule" alt title="Christoph Jule" class="photoDeProfil">
                         <div>
                             <p>Projectionniste & Animateur
                                 Cinéma "Le Festival"
