reglage images bas

--- a/index.html
+++ b/index.html
@@ -215,16 +215,9 @@
             </div>
         </div>
         <div class= "row">
-            <div><img src=img-logo\logo.png title="notre logo" alt="notre logo"></div>
-            <!--logo-->
-            <div></div>
-            <!--info-->
-            <div></div>
-            <div>
-                <img src=img-logo\pngegg_(9).png title="notre page Facebook" alt="notre page Facebook">
-                <img src=img-logo\pngegg_(10).png title="notre Instagram" alt="notre Instagram">
-            </div>
-            <!--logo facebook et insta-->
+            <div class="col"><img src=img-logo\logo.png title="notre logo" alt="notre logo" classe="logo"></div>
+            <div class="col"><img src=img-logo\pngegg_(9).png title="notre page Facebook" alt="notre page Facebook" classe="logo"> </div>
+            <div class="col"><img src=img-logo\pngegg_(10).png title="notre Instagram" alt="notre Instagram"classe="logo"></div>
         </div>
         <div class= "row">
             <p>Si vous avez besoin de nous contacter :
