--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
         </div>
         <div class= "row">
             <div class="col"><img src=img-logo\logo.png title="notre logo" alt="notre logo" classe="logo"></div>
+            <div class="col"><p></p></div>
             <div class="col"><img src=img-logo\pngegg_(9).png title="notre page Facebook" alt="notre page Facebook" classe="logo"> </div>
             <div class="col"><img src=img-logo\pngegg_(10).png title="notre Instagram" alt="notre Instagram"classe="logo"></div>
         </div>
