--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
 
     <nav>
         <ul>
-            <li><a href="#ecran1" class="puce puce1"> </a> </li>
-            <li><a href="#ecran2" class="puce puce2"> </a> </li>
-            <li><a href="#ecran3" class="puce puce3"> </a> </li>
-            <li><a href="#ecran4" class="puce puce4"> </a> </li>
-            <li><a href="#ecran5" class="puce puce5"> </a> </li>
-            <li><a href="#ecran6" class="puce puce6"> </a> </li>
-            <li><a href="#ecran7" class="puce puce7"> </a> </li>
+            <li><a href="#ecran1" class="puce puce1"> <img src=img-puce\pucev.png> </a> </li>
+            <li><a href="#ecran2" class="puce puce2"> <img src=img-puce\pucev.png></a> </li>
+            <li><a href="#ecran3" class="puce puce3"> <img src=img-puce\pucev.png></a> </li>
+            <li><a href="#ecran4" class="puce puce4"> <img src=img-puce\pucev.png></a> </li>
+            <li><a href="#ecran5" class="puce puce5"> <img src=img-puce\pucev.png></a> </li>
+            <li><a href="#ecran6" class="puce puce6"> <img src=img-puce\pucev.png></a> </li>
+            <li><a href="#ecran7" class="puce puce7"> <img src=img-puce\pucev.png></a> </li>
 
         </ul>
     </nav>
