--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     
     <div class="content">
         <div class="row">
-            <div class="col">
+            <div class="col" id="rightText">
                 <!-- texte de bienvenu-->
                 <h1>Bienvenue au Cinema Le Festival !</h1>
                 <p>Specialisé dans le cinéma d'animation et d'effets spéciaux à Bègles !</p>
@@ -95,18 +95,18 @@
         <div class="row">
         <div class="col">
         <h2 id="ecran3">Notre Cinéma</h2>
-        <div class="col">
+        <div class="col" >
             <div class="row">
                 <h3>Ici vous pouvez retrouver des informations au sujet de notre cinéma</h3>
             </div>
-            <div class="row">
-                <p>Situé à la barrière de Bègles, ''Le Festival'' propose des prix abordables pour tous, des séances
-                    à partir de 5€, mais également des soirées à thème, des séances déguisées, des possibilités pour
-                    les enfants de fêter leur anniversaire, des tournois Mario Kart… sans oublier le festival
-                    international du film d'animation ''Les Nuits Magiques'' ainsi que le festival du film
+            <div class="row" id="rightText">
+                <p>Situé à la barrière de Bègles, ''Le Festival'' propose des prix abordables pour tous, des séances <br>
+                    à partir de 5€, mais également des soirées à thème, des séances déguisées, des possibilités pour<br>
+                    les enfants de fêter leur anniversaire, des tournois Mario Kart… sans oublier le festival<br>
+                    international du film d'animation ''Les Nuits Magiques'' ainsi que le festival du film<br>
                     d'animation pour la petite enfance ''Les P'tits Cartooneurs'' !</p>
                 </div>
-            <div class="row">
+            <div class="row" id="rightText">
                 <ul>
                     <li>Deux salles Paul GRIMAULT et René LALOUX (290 et 78 places)</li>
                     <li>Accès handicapés</li>
@@ -114,13 +114,13 @@
                     <li>3D</li>
                 </ul>
             </div>
-            <div class="row">
+            <div class="row" id="rightText">
                 <p>Autant de bonnes raisons de venir au Cinéma ''Le Festival'' !</p>
                 </div>
             </div>
         </div>
     
-            <img src = img-logo\image-cine.jpg title = "notre cinéma" alt ="notre cinéma" class="cinemaLateral">
+            <img src = img-logo\image-cine.jpg title = "notre cinéma" alt ="Cienam LeFestival" class="cinemaLateral">
         </div>
     </div>
 
@@ -169,7 +169,7 @@
                 <!--div avec la team cinema-->
                 <h2 id="ecran6">Notre équipe : </h2>
                 <div>
-                    <div class= "col">
+                    <div class= "col" id="team">
                         <h3>Fabrice de la ROSA</h3>
                         <img src=img-portrait\1.png title="Fabrice de la ROSA" alt="Fabrice de la ROSA" class="photoDeProfil">
                         <p>Directeur & programmateur
