--- a/index.html
+++ b/index.html
@@ -131,16 +131,24 @@
             <div class="row">
                 <!-- div avec les boutons-->
                 <div class="col">
-                    <p>Initiation dessin animés</p>
+                    <span class="blockservice">
+                    <p>Initiation dessin animés </style></p>
+                </span>
                 </div>
                 <div class="col">
+                    <span class="blockservice">
                     <p>Stage réalisation</p>
+                </span>
                 </div>
                 <div class="col">
+                    <span class="blockservice">
                     <p>Projection à la demande</p>
+                </span>
                 </div>
                 <div class="col">
+                    <span class="blockservice">
                     <img src=img-logo\Flech-lien.png title="voir plus de services" alt="voir plus de services">
+                </span>
                 </div>
             </div>
         </div>
