col pour la team

--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
             <div class="row">
                 <!--div avec la team cinema-->
                 <h2 id="ecran6">Notre équipe : </h2>
-                <div>
+                <div class= "col">
+                <div class= "row">
                     <div class= "col" id="team">
                         <h3>Fabrice de la ROSA</h3>
                         <img src=img-portrait\1.png title="Fabrice de la ROSA" alt="Fabrice de la ROSA" class="photoDeProfil">
@@ -198,6 +199,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     
 </div>
