--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./css/buttons.css" />
     <link rel="stylesheet" href="css/puce.css">  
     <link rel="stylesheet" href="./css/index.css" /> 
+    <link rel="stylesheet" href="./css/buttonsServices.css" /> 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Domine&family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -130,26 +131,35 @@
         <div class="col">
             <h2 id="ecran4">Nos Services</h2>
             <div class="row">
+                
                 <!-- div avec les boutons-->
                 <div class="col">
-                    <span class="blockservice">
-                    <p>Initiation dessin animés </style></p>
-                </span>
+                    <section class="buttons2">
+                        <span class="btn-2 btn-3">
+                            <p>Initiation dessin animés</p>
+                        </span>
+                    </section>
                 </div>
                 <div class="col">
-                    <span class="blockservice">
-                    <p>Stage réalisation</p>
-                </span>
+                    <section class="buttons2">
+                        <span class="btn-2 btn-3">
+                            <p>Stage réalisation</p>
+                        </span>
+                    </section>
                 </div>
                 <div class="col">
-                    <span class="blockservice">
-                    <p>Projection à la demande</p>
-                </span>
+                    <section class="buttons2">
+                        <span class="btn-2 btn-3">
+                            <p>Projection à la demande</p>
+                        </span>
+                    </section>
                 </div>
                 <div class="col">
-                    <span class="blockservice">
-                    <img src=img-logo\Flech-lien.png title="voir plus de services" alt="voir plus de services">
-                </span>
+                    <section class="buttons2">
+                        <span class="btn-2 btn-3">
+                            <img src=img-logo\Flech-lien.png title="voir plus de services" alt="voir plus de services">
+                        </span>
+                    </section>
                 </div>
             </div>
         </div>
