--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluide">
+    <div class="container-fluide" id ="testPart">
         <div class="row">
         <div class="col">
         <h2 id="ecran3">Notre Cinéma</h2>
@@ -215,9 +215,9 @@
             </div>
         </div>
     </div>
-</div>
+
     
-</div>
+
     
 
     <footer  id="ecran7">
