--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
 
 
-        <div class="container-fluide">
-            <div class="row" id="menu">
+        <div class="container-fluid menu">
+            <div class="row" >
                 <!--le menu-->
                 <div class="col">
                     <section class="buttons">
@@ -133,7 +133,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluide" id ="testPart">
+    <div class="container-fluid testPart" >
         <div class="row">
         <div class="col">
         <h2 id="ecran3">Notre Cinéma</h2>
