--- a/index.html
+++ b/index.html
@@ -10,28 +10,11 @@
     <meta name="viewport" container="width=device-width, initial-scale=1" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
-<<<<<<< HEAD
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/buttons.css" />
-    <link rel="stylesheet" href="css/puce.css">
-    <link rel="stylesheet" href="./css/index.css" />
-    <link rel="stylesheet" href="./css/buttonsServices.css" />
-=======
->>>>>>> refs/remotes/origin/master
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Domine&family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-<<<<<<< HEAD
-
-
-</head>
-
-<body>
-
-=======
->>>>>>> refs/remotes/origin/master
 
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/buttons.css" />
@@ -127,21 +110,21 @@
                     <div class="col">
                         <section class="buttons2">
                             <span class="btn-2 btn-3">
-                                <p>Initiation dessin animés</p>
+                                <p class="BS">Initiation dessin animés</p>
                             </span>
                         </section>
                     </div>
                     <div class="col">
                         <section class="buttons2">
                             <span class="btn-2 btn-3">
-                                <p>Stage réalisation</p>
+                                <p class="BS">Stage réalisation</p>
                             </span>
                         </section>
                     </div>
                     <div class="col">
                         <section class="buttons2">
                             <span class="btn-2 btn-3">
-                                <p>Projection à la demande</p>
+                                <p class="BS">Projection à la</p>
                             </span>
                         </section>
                     </div>
@@ -157,17 +140,10 @@
             </div>
         </div>
     </div>
-<<<<<<< HEAD
-    <div class="container-fluide" id="testPart">
-        <div class="row">
-            <div class="col">
-                <h2 id="ecran3">Notre Cinéma</h2>
-=======
     <div class="container-fluid container-cinema" id="testPart">
         <div class="row">
             <div class="col">
                 <h2 id="ecran4" class="title-anchor">Notre Cinéma</h2>
->>>>>>> refs/remotes/origin/master
                 <div class="col">
                     <div class="row">
                         <h3>Ici vous pouvez retrouver des informations au sujet de notre cinéma</h3>
@@ -202,11 +178,6 @@
                         <p>Autant de bonnes raisons de venir au Cinéma ''Le Festival'' !</p>
                     </div>
                 </div>
-<<<<<<< HEAD
-            </div>
-
-            <img src=img-logo\image-cine.jpg title="notre cinéma" alt="Cienam LeFestival" class="cinemaLateral">
-=======
             </div>
 
             <img src=img-logo\image-cine.jpg title="notre cinéma" alt="Cienam LeFestival" class="cinemaLateral">
@@ -230,38 +201,6 @@
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3177.0318191972688!2d-0.5648688286896452!3d44.813136927981915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5527aac4575fe1%3A0x7daa99163ab271bf!2sLe%20Festival!5e0!3m2!1sfr!2sfr!4v1603199447077!5m2!1sfr!2sfr"
                 frameborder="0" class="maps" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
->>>>>>> refs/remotes/origin/master
-        </div>
-        <!--mettre la carte google ici-->
-    </div>
-<<<<<<< HEAD
-
-=======
->>>>>>> refs/remotes/origin/master
-
-    <div class="row">
-        <!--div avec la team cinema-->
-
-<<<<<<< HEAD
-
-
-    <div class="row">
-        <div class="col">
-            <!-- div contact-->
-            <h2 id="ecran5">Nos Contacts </h2>
-            <div>
-                <p>
-                    05.56.51.76.60
-                    contact@cinemalefestival.fr
-                    09.51.99.04.80
-            </div>
-        </div>
-    </div>
-    <div>
-        <div>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3177.0318191972688!2d-0.5648688286896452!3d44.813136927981915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5527aac4575fe1%3A0x7daa99163ab271bf!2sLe%20Festival!5e0!3m2!1sfr!2sfr!4v1603199447077!5m2!1sfr!2sfr"
-                frameborder="0" class="maps" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
         <!--mettre la carte google ici-->
     </div>
@@ -269,12 +208,8 @@
     <div class="row">
         <!--div avec la team cinema-->
 
-        <div class="col">
-            <h2 id="ecran6">Notre équipe : </h2>
-=======
         <div class="col">
             <h2 id="ecran6" class="title-anchor">Notre équipe : </h2>
->>>>>>> refs/remotes/origin/master
             <div class="row">
                 <div class="col" id="team">
                     <h3>Fabrice de la ROSA</h3>
@@ -309,14 +244,7 @@
     </div>
 
 
-<<<<<<< HEAD
-
-
-
-    <footer id="ecran7">
-=======
     <footer id="ecran7" class="title-anchor">
->>>>>>> refs/remotes/origin/master
         <div class="container">
             <div class="row">
                 <!--les boutons menu-->
@@ -355,11 +283,6 @@
             </div>
             <!--info-->
         </div>
-<<<<<<< HEAD
-    </footer>
-
-=======
->>>>>>> refs/remotes/origin/master
 
     </footer>
 
