--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
         </ul>
     </nav>
 
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col" id="rightText">
+            <div class="col distantuno" >
                 <!-- texte de bienvenu-->
                 <h1>Bienvenue au Cinema Le Festival !</h1>
                 <p>Specialisé dans le cinéma d'animation et d'effets spéciaux à Bègles !</p>
@@ -85,14 +85,14 @@
 
         <div class="row">
             <div class="col">
-                <h2 id="ecran1" class="title-anchor">Nos Films à l'affiche</h2>
+                <h2 id="ecran1" class="title-anchor distantdos">Nos Films à l'affiche</h2>
                 <div class="row"></div> <!-- div avec le boostrap-->
                 <p>Voir plus de films</p>
             </div>
         </div>
         <div class="row">
-            <div class="col">
-                <h2 id="ecran2"  class="title-anchor">Nos Evenement</h2>
+            <div class="col" >
+                <h2 id="ecran2"  class="title-anchor distantdos">Nos Evenement</h2>
                 <div class="row"></div> <!-- div avec le boostrap-->
                 <p>Voir plus d'évenement'</p>
             </div>
@@ -100,7 +100,7 @@
 
         <div class="row">
             <div class="col">
-                <h2 id="ecran3" class="title-anchor">Nos Services</h2>
+                <h2 id="ecran3" class="title-anchor distantdos">Nos Services</h2>
                 <div class="row">
 
                     <!-- div avec les boutons-->
@@ -140,7 +140,7 @@
     <div class="container-fluid container-cinema" id="testPart">
         <div class="row">
             <div class="col">
-                <h2 id="ecran4" class="title-anchor">Notre Cinéma</h2>
+                <h2 id="ecran4" class="title-anchor distantdos">Notre Cinéma</h2>
                 <div class="col">
                     <div class="row">
                         <h3>Ici vous pouvez retrouver des informations au sujet de notre cinéma</h3>
@@ -184,7 +184,7 @@
     <div class="row">
         <div class="col">
             <!-- div contact-->
-            <h2 id="ecran5" class="title-anchor">Nos Contacts </h2>
+            <h2 id="ecran5" class="title-anchor distantdos">Nos Contacts </h2>
             <div>
                 <p>
                     05.56.51.76.60
@@ -206,7 +206,7 @@
         <!--div avec la team cinema-->
 
         <div class="col">
-            <h2 id="ecran6" class="title-anchor">Notre équipe : </h2>
+            <h2 id="ecran6" class="title-anchor distantdos">Notre équipe : </h2>
             <div class="row">
                 <div class="col" id="team">
                     <h3>Fabrice de la ROSA</h3>
