--- a/index.html
+++ b/index.html
@@ -9,28 +9,25 @@
         container="Site du Cinéma LeFestival de Bègles. Programmation des films et événements, horaires et services" />
     <meta name="viewport" container="width=device-width, initial-scale=1" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
-
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Domine&family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
 
     <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/buttons.css" />
-    <link rel="stylesheet" href="css/puce.css">
-    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="css/puce.css">  
+    <link rel="stylesheet" href="./css/index.css" /> 
     <link rel="stylesheet" href="./css/buttonsServices.css" />
+    <link rel="stylesheet" href="./css/style.css" /> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Domine&family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
 
 
 </head>
 
 <body>
 
-    <header>
-        <div class="container-fluide">
-            <div class="row" id="menu">
+        <div class="container-fluid menu">
+            <div class="row" >
                 <!--le menu-->
                 <div class="col">
                     <section class="buttons">
@@ -78,9 +75,9 @@
         </ul>
     </nav>
 
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col" id="rightText">
+            <div class="col distantuno" >
                 <!-- texte de bienvenu-->
                 <h1>Bienvenue au Cinema Le Festival !</h1>
                 <p>Specialisé dans le cinéma d'animation et d'effets spéciaux à Bègles !</p>
@@ -89,14 +86,14 @@
 
         <div class="row">
             <div class="col">
-                <h2 id="ecran1" class="title-anchor">Nos Films à l'affiche</h2>
+                <h2 id="ecran1" class="title-anchor distantdos">Nos Films à l'affiche</h2>
                 <div class="row"></div> <!-- div avec le boostrap-->
                 <p>Voir plus de films</p>
             </div>
         </div>
         <div class="row">
-            <div class="col">
-                <h2 id="ecran2"  class="title-anchor">Nos Evenement</h2>
+            <div class="col" >
+                <h2 id="ecran2"  class="title-anchor distantdos">Nos Evenement</h2>
                 <div class="row"></div> <!-- div avec le boostrap-->
                 <p>Voir plus d'évenement'</p>
             </div>
@@ -104,7 +101,7 @@
 
         <div class="row">
             <div class="col">
-                <h2 id="ecran3" class="title-anchor">Nos Services</h2>
+                <h2 id="ecran3" class="title-anchor distantdos">Nos Services</h2>
                 <div class="row">
 
                     <!-- div avec les boutons-->
@@ -144,7 +141,7 @@
     <div class="container-fluid container-cinema" id="testPart">
         <div class="row">
             <div class="col">
-                <h2 id="ecran4" class="title-anchor">Notre Cinéma</h2>
+                <h2 id="ecran4" class="title-anchor distantdos">Notre Cinéma</h2>
                 <div class="col">
                     <div class="row">
                         <h3>Ici vous pouvez retrouver des informations au sujet de notre cinéma</h3>
@@ -188,7 +185,7 @@
     <div class="row">
         <div class="col">
             <!-- div contact-->
-            <h2 id="ecran5" class="title-anchor">Nos Contacts </h2>
+            <h2 id="ecran5" class="title-anchor distantdos">Nos Contacts </h2>
             <div>
                 <p>
                     05.56.51.76.60
@@ -210,7 +207,7 @@
         <!--div avec la team cinema-->
 
         <div class="col">
-            <h2 id="ecran6" class="title-anchor">Notre équipe : </h2>
+            <h2 id="ecran6" class="title-anchor distantdos">Notre équipe : </h2>
             <div class="row">
                 <div class="col" id="team">
                     <h3>Fabrice de la ROSA</h3>
