--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="col">
                         <section class="buttons2">
                             <span class="btn-2 btn-3">
-                                <p class="BS">Projection à la</p>
+                                <p class="BS">Projection à la demande</p>
                             </span>
                         </section>
                     </div>
