working on alignement

--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
         <div class="row">
             <div class="col">
                 <h2 id="ecran1" class="title-anchor distantdos">Nos Films à l'affiche</h2>
-                <div class="row"></div> <!-- div avec le boostrap-->
+                <div class="row">
+                    
+                </div> <!-- div avec le boostrap-->
                 <p>Voir plus de films</p>
             </div>
         </div>
@@ -141,11 +143,11 @@
         <div class="row">
             <div class="col">
                 <h2 id="ecran4" class="title-anchor distantdos">Notre Cinéma</h2>
-                <div class="col">
-                    <div class="row">
-                        <h3>Ici vous pouvez retrouver des informations au sujet de notre cinéma</h3>
+                <div class="col distantuno">
+                    <div class="row ">
+                        <h3>Ici vous pouvez retrouver des informations <br> au sujet de notre cinéma</h3>
                     </div>
-                    <div class="row" id="rightText">
+                    <div class="row rightText" >
                         <p>Situé à la barrière de Bègles, ''Le Festival'' propose des prix abordables pour tous, des
                             séances <br>
                             à partir de 5€, mais également des soirées à thème, des séances déguisées, des possibilités
@@ -155,7 +157,7 @@
                             international du film d'animation ''Les Nuits Magiques'' ainsi que le festival du film<br>
                             d'animation pour la petite enfance ''Les P'tits Cartooneurs'' !</p>
                     </div>
-                    <div class="row" id="rightText">
+                    <div class="row rightText" >
                         <ul>
                             <li>
                                 <p>Deux salles Paul GRIMAULT et René LALOUX (290 et 78 places)</p>
@@ -171,7 +173,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="row" id="rightText">
+                    <div class="row rightText">
                         <p>Autant de bonnes raisons de venir au Cinéma ''Le Festival'' !</p>
                     </div>
                 </div>
@@ -185,7 +187,7 @@
         <div class="col">
             <!-- div contact-->
             <h2 id="ecran5" class="title-anchor distantdos">Nos Contacts </h2>
-            <div>
+            <div class="rightText">
                 <p>
                     05.56.51.76.60
                     contact@cinemalefestival.fr
@@ -205,7 +207,7 @@
     <div class="row">
         <!--div avec la team cinema-->
 
-        <div class="col">
+        <div class="col rightText">
             <h2 id="ecran6" class="title-anchor distantdos">Notre équipe : </h2>
             <div class="row">
                 <div class="col" id="team">
