--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 
         <div class="container-fluid menu">
             <div class="row" >
+                <div>
                 <!--le menu-->
+                <div class="row men1">
                 <div class="col">
                     <section class="buttons">
 
@@ -54,9 +56,13 @@
                             <p>Contact</p>
                         </a>
                 </div>
-                <div class="col">
+            </div>
+                <div class="row men2">
+                    <div class="col">
                     <img src=Img-logo\logo.png title="Notre logo" alt="Notre logo">
                 </div>
+                </div>
+            </div>
                 <!--ici le logo-->
             </div>
         </div>
@@ -188,7 +194,7 @@
         <div class="col">
             <!-- div contact-->
             <h2 id="ecran5" class="title-anchor distantdos">Nos Contacts </h2>
-            <div class="rightText">
+            <div class="rightText distantuno">
                 <p>
                     05.56.51.76.60
                     contact@cinemalefestival.fr
