--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <div class="col">
             <h2 id="ecran6" class="title-anchor distantdos">Notre équipe : </h2>
             <div class="row">
-                <div class="col" id="team">
+                <div class="col arière1" id="team">
                     <h3>Fabrice de la ROSA</h3>
                     <img src=img-portrait\1.png title="Fabrice de la ROSA" alt="Fabrice de la ROSA"
                         class="photoDeProfil">
@@ -218,7 +218,7 @@
                         Cofondateur de Flip-Book
                         Et passionné d'animation</p>
                 </div>
-                <div class="col">
+                <div class="col arière1">
                     <h3>Severine</h3>
                     <img src=img-portrait\3.png title="Severine" alt="Séverine" class="photoDeProfil">
                     <p>Projectionniste & Animatrice
@@ -226,7 +226,7 @@
                         Accueil
                     </p>
                 </div>
-                <div class="col">
+                <div class="col arière1">
                     <h3>Christoph Jule</h3>
                     <img src=img-portrait\2.png title="Christoph Jule" alt title="Christoph Jule" class="photoDeProfil">
                     <div>
