--- a/index.html
+++ b/index.html
@@ -166,40 +166,40 @@
         </div>
         <div class="row">
             <div class="col" >
-                <h2 id="ecran2"  class="title-anchor distantdos">Nos Evenement</h2>
+                <h2 id="ecran2"  class="title-anchor distantdos ">Nos Evenement</h2>
                 <div class="row"></div> <!-- div avec le boostrap-->
                 <p>Voir plus d'évenement'</p>
             </div>
         </div>
 
-        <div class="row">
+        <div class="row ">
             <div class="col">
                 <h2 id="ecran3" class="title-anchor distantdos">Nos Services</h2>
                 <div class="row">
 
                     <!-- div avec les boutons-->
-                    <div class="col">
-                        <section class="buttons2">
-                            <span class="btn-2 btn-3">
+                    <div class="col arière2">
+                        <section class="buttons2 ">
+                            <span class="btn-2 btn-3 ">
                                 <p class="BS">Initiation dessin animés</p>
                             </span>
                         </section>
                     </div>
-                    <div class="col">
+                    <div class="col arière2">
                         <section class="buttons2">
                             <span class="btn-2 btn-3">
                                 <p class="BS">Stage réalisation</p>
                             </span>
                         </section>
                     </div>
-                    <div class="col">
+                    <div class="col arière2">
                         <section class="buttons2">
                             <span class="btn-2 btn-3">
                                 <p class="BS">Projection à la demande</p>
                             </span>
                         </section>
                     </div>
-                    <div class="col">
+                    <div class="col arière2">
                         <section class="buttons2">
                             <span class="btn-2 btn-3">
                                 <img src=img-logo\Flech-lien.png title="voir plus de services"
