--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </head>
 
 <body>
-
+    <header>
         <div class="container-fluid menu">
             <div class="row" >
                 <!--le menu-->
@@ -357,7 +357,7 @@
 
     </footer>
 
-    <script src="/js/main.js"></script>
+
       <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
   <script src="./caroussel_res/slick/slick.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript">
@@ -418,6 +418,9 @@
       });
     });
 </script>
+
+<script src="./js/main.js"></script>
+
 </body>
 
 </html>
